# pyCRCplot

./: README.md  pyproject.sublime-workspace  pyproject.toml
pyCRC_plot/: CRC.py  gui.py  run.py
src/pyCRC_plot/: CRC.py  gui.py  run.py  show_results.py
src/pyCRC_plot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
