[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyCRC_plot"
version = "0.0.2"
authors = [
  { name="Franco Viscarra", email="franco.viscarra@bioch.ox.ac.uk" },
]
description = "Concentration response curve fitting and plotting written in python"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/francoviscarra/pycrcplot"
"Bug Tracker" = "https://github.com/francoviscarra/pycrcplot/issues"
